<resources>
    <string name="app_name">My Library</string>
    <string name="see_all_books">See all books</string>
    <string name="currently_reading_books">Currently reading books</string>
    <string name="already_read_books">Already read Books</string>
    <string name="your_wishlist">Your WishList</string>
    <string name="see_your_favorites">See Your Favorites</string>
    <string name="about">About</string>
    <string name="license">Developed By ChampiMagic</string>
    <string name="my_library">My Library</string>
    <string name="book_cover">book cover</string>
    <string name="book_name">Book Name</string>
</resources>