<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:text="@string/my_library"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnAllBooks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/see_all_books"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnWantToRead"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_wishlist"
        app:layout_constraintEnd_toEndOf="@+id/btnAlreadyRead"
        app:layout_constraintStart_toStartOf="@+id/btnAlreadyRead"
        app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/see_your_favorites"
        app:layout_constraintEnd_toEndOf="@+id/btnWantToRead"
        app:layout_constraintStart_toStartOf="@+id/btnWantToRead"
        app:layout_constraintTop_toBottomOf="@+id/btnWantToRead" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorite"
        app:layout_constraintStart_toStartOf="@+id/btnFavorite"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorite" />

    <Button
        android:id="@+id/btnAlreadyRead"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_read_books"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
        app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" />

    <Button
        android:id="@+id/btnCurrentlyReading"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currently_reading_books"
        app:layout_constraintEnd_toEndOf="@+id/btnAllBooks"
        app:layout_constraintStart_toStartOf="@+id/btnAllBooks"
        app:layout_constraintTop_toBottomOf="@+id/btnAllBooks" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/book_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@mipmap/logo_app" />

    <TextView
        android:id="@+id/txtLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/license"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>